# pommes-milp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  pyproject.toml
ci/docker/: dockerfile  sphinx_doc_dockerfile
ci/envs/: environment-all.yaml  environment-basic.yaml  environment-contributing-cplex.yaml  environment-contributing.yaml  environment-doc.yaml  environment-test.yaml
docs/: requirements.txt  yaml_to_rst.py
docs/source/: conf.py  examples.rst  how_to_use.rst  index.rst  installation.rst
docs/source/methodology/: dataset_description.rst  index.rst  model_description.rst  nomenclature.rst
docs/source/notebooks/: example_notebook.ipynb
pommes/: __init__.py  common_plots.py  post_process.py  utils.py
pommes/examples/test_case/: config.yaml  data_source.yaml  plots.ipynb  pre_process.yaml
pommes/examples/test_case/data/: availability.csv  calendar.csv  carbon.csv  combined.csv  combined_factor.csv  combined_operation.csv  conversion.csv  conversion_factor.csv  conversion_operation.csv  demand.csv  discount.csv  eco.csv  import_hourly.csv  import_yearly.csv  load_shedding.csv  spillage.csv  storage.csv  storage_factor.csv  time_step_duration.csv  transport.csv  turpe.csv  turpe_calendar.csv
pommes/examples/test_case/pre_process/: pre_process.py  revert_pre_process.py
pommes/io/: __init__.py  build_input_dataset.py  calculate_summaries.py  read_solution.py  save_solution.py
pommes/model/: __init__.py  build_model.py  carbon.py  combined.py  conversion.py  flexdem.py  net_import.py  process.py  retrofit.py  storage.py  transport.py  turpe.py
pommes/model/data_validation/: __init__.py  dataset_check.py  dataset_description.yaml
pommes/solver/: __init__.py  utils_xpress.py
pommes/tests/: __init__.py  conftest.py  test_build_input_dataset.py  test_carbon_net_import.py  test_combined.py  test_conversion.py  test_io.py  test_net_import.py  test_post_processes.py  test_process.py  test_storage.py  test_test_case.py  test_test_case_aggregate_link_data.py  test_test_case_calculate_summaries.py  test_time_slice.py  test_transport.py
pommes/tests/tests_utils/: __init__.py  test_sort_dataset.py  test_variable_selection_from_dims.py
pommes/tools/: draft_multi_index.py
pommes/visualisation/: __init__.py  annual_energy_plot.py  capacity_plot.py  energy_cost_plot.py
